--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -101,7 +101,7 @@ jobs:
   build-for-windows-flutter:
     name: Build Windows
     needs: [build-RustDeskTempTopMostWindow, generate-bridge]
-    runs-on: [self-hosted, ${{ matrix.job.os }}]
+    runs-on: [self-hosted, windows-2022]
     strategy:
       fail-fast: false
       matrix:
